objects/Container__c.object
<CustomObject>
    <fields>
        <fullName>Alive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Downtime__c</fullName>
        <label>Last Downtime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Uptime__c</fullName>
        <formula>TEXT( 
FLOOR(NOW() - Last_Downtime__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*1440,60),0) 
) &amp;&quot; Minutes &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*1440*60,60),0) 
) &amp;&quot; Seconds&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uptime</label>
        <type>Text</type>
    </fields>
    <label>Container</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Container Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>